@@ -12,11 +12,17 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkSquare.c,v 1.13 2008/10/17 23:18:37 nijtmans Exp $
+ * RCS: @(#) $Id: tkSquare.c,v 1.14 2009/11/19 23:45:08 nijtmans Exp $
  */
 
 #if 0
 #define __NO_OLD_CONFIG
+#endif
+#ifndef USE_TCL_STUBS
+#   define USE_TCL_STUBS
+#endif
+#ifndef USE_TK_STUBS
+#   define USE_TK_STUBS
 #endif
 #include "tkInt.h"
 
